<resources>
    <string name="app_name">SystemGram</string>
    <string name="welcome_back">Welcome SystemGram !</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sing_in">Sign in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sing_up">Sign Up</string>
    <string name="select_user">Select user</string>
    <string name="type_a_message">Type a message...</string>
</resources>